<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_menu_own_memories"
        android:icon="@drawable/ic_sign"
        android:title="@string/own_memories" />

    <item
        android:id="@+id/nav_menu_pip_memories"
        android:icon="@drawable/ic_sign"
        android:title="@string/pip_memories" />

    <item
        android:id="@+id/nav_menu_info"
        android:icon="@drawable/ic_notifications"
        android:title="@string/info" />

    <item
        android:id="@+id/nav_menu_comment"
        android:icon="@drawable/ic_comment"
        android:title="@string/comment" />

    <item
        android:id="@+id/nav_menu_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />

    <item
        android:id="@+id/nav_menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />

</menu>