<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:clickable="true"
        android:elevation="@dimen/search_elevation"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_search" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/img_search"
            android:text="@string/search_content"
            android:textSize="@dimen/nav_header_name_text_size" />

    </RelativeLayout>

    <com.amap.api.maps.MapView
        android:id="@+id/mv_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.amap.api.maps.MapView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_place"
            android:layout_width="@dimen/ic_place_size"
            android:layout_height="@dimen/ic_place_size"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_location" />

        <RelativeLayout
            android:id="@+id/rl_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/img_place"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="@dimen/action_evelation"
            android:foreground="?android:attr/selectableItemBackground">

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/img_view"
                android:text="@string/view" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/board_height_double"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/board_height"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:elevation="@dimen/board_elevation">

            <TextView
                android:id="@+id/tv_board"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:singleLine="true"
                android:text="@string/move_pin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/nav_header_name_text_size" />

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_locate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:clickable="true"
            android:src="@drawable/ic_locate"
            app:fabSize="normal" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>